Simple graph - need to fix blurring

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 #background {
-    background: url("../images/symphony.png") left top repeat;
+    /*background: url("../images/symphony.png") left top repeat;*/
     /*background-repeat: repeat-x;*/
     /*background-size: cover;*/
     padding-top: 30px;
@@ -18,6 +18,7 @@
 
 body {
     /* padding-top: 50px; */
+    font-size: 18px;
 }
 
 a {
@@ -32,7 +33,7 @@ h1 {
 }
 h2 {
     font-family: "Arial", sans-serif;
-    font-size: 27pt;
+    /*font-size: 27pt;*/
     font-weight: 300;
     color: #333333;
 }
@@ -49,6 +50,7 @@ hr {
     border: 0;
     border-top: 2px solid #eeeeee;
     background-color: #eeeeee;
+    width: 65%;
 }
 
 ul li { 
@@ -60,6 +62,78 @@ ul li span {
 .language-button {
     background-color: #0BACD6;
     color: white;
+}
+
+.graph-outer {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.graph-left {
+    width: 30%;
+    height: 100%;
+    text-align: right;
+    display: inline-block;
+}
+
+.graph-right {
+    width: 70%;
+    height: 100%;
+    text-align: left;
+    display: inline-block;
+}
+
+.graph-language {
+    height: 15px;
+    background-color: #0BACD6;
+    font-size: 13px;
+    font-weight: 700;
+    vertical-align: middle;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    border-radius: 3px;
+    color: white;
+    text-align: center;
+    position: relative;
+    left: -3px;
+
+    -webkit-transition: all ease 0.1s;
+    -moz-transition: all ease 0.1s;
+    -o-transition: all ease 0.1s;
+    -ms-transition: all ease 0.1s;
+    transition: all ease 0.1s;
+}
+.graph-language:hover {
+    -webkit-transform:scale(1.05);
+    -moz-transform:scale(1.05);
+    -o-transform:scale(1.05);
+    -ms-transform:scale(1.05);
+    transform:scale(1.05) ;
+    font-size: 14px;
+}
+
+.graph-vertical {
+    border-radius: 3px;
+    height: 200px;
+    width: 5px;
+    background-color: #0BACD6;
+    text-align: right;
+    position: relative;
+    float: right;
+    margin-top: auto;
+    margin-bottom: auto;
+    top: 2px;
+}
+
+.circle-img {
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    border: 2px solid #eeeeee;
+    padding: 3px;
 }
 
 .company {
@@ -126,6 +200,7 @@ ul li span {
 }
 .left-center {
     text-align: left;
+    margin-left: 50px;
 }
 
 .starter-template {
@@ -168,6 +243,15 @@ ul li span {
     margin-left: auto;
     margin-right: auto;
 }
+.information-text a {
+    font-size: 17px;
+    color: #333333;
+    text-decoration: none;
+}
+.information-text a:hover {
+    text-decoration: none;
+    color: #0BACD6;
+}
 
 .my-button {
     background-color: #0BACD6;
@@ -185,9 +269,6 @@ ul li span {
     background-image: url('../images/twitterlogo.png');
 }
 .social-roll {
-
-    
-    
     border-radius: 50%;
     -webkit-transition: all ease 0.3s;
     -moz-transition: all ease 0.3s;
@@ -203,23 +284,6 @@ ul li span {
 }
 .social-roll:hover {
 
-    /*-moz-animation-name: spin;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-timing-function: linear;
-    -moz-animation-duration: 0.5s;
-    -webkit-animation-name: spin;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-duration: 0.5s;    
-    -ms-animation-name: spin;
-    -ms-animation-iteration-count: infinite;
-    -ms-animation-timing-function: linear;
-    -ms-animation-duration: 0.5s;
-    animation-name: spin;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-duration: 0.5s;*/
-
     /*box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.8);*/
     -webkit-transform:rotate(360deg);
     -moz-transform:rotate(360deg);
@@ -232,40 +296,6 @@ ul li span {
     display: inline-block;
     position:relative;
     top:0px;
-}
-
-keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes spin {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@-moz-keyframes spin {
-    from {
-        -moz-transform: rotate(0deg);
-    }
-    to {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-ms-keyframes spin {
-    from {
-        -ms-transform: rotate(0deg);
-    }
-    to {
-        -ms-transform: rotate(360deg);
-    }
 }
 
 .social-popout {
